add airgaped sign request page

--- a/package.json
+++ b/package.json
@@ -181,6 +181,7 @@
     "pump": "^3.0.0",
     "punycode": "^2.1.1",
     "qrcode-generator": "1.4.1",
+    "qrcode.react": "^1.0.1",
     "react": "^16.12.0",
     "react-dnd": "^3.0.2",
     "react-dnd-html5-backend": "^7.4.4",
@@ -188,6 +189,7 @@
     "react-idle-timer": "^4.2.5",
     "react-inspector": "^2.3.0",
     "react-popper": "^2.2.3",
+    "react-qr-reader": "^2.2.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-simple-file-input": "^2.0.0",
