--- a/package.json
+++ b/package.json
@@ -103,7 +103,7 @@
     "@formatjs/intl-relativetimeformat": "^5.2.6",
     "@fortawesome/fontawesome-free": "^5.13.0",
     "@keystonehq/bc-ur-registry-eth": "^0.6.8",
-    "@keystonehq/metamask-airgapped-keyring": "0.0.4-alpha.0",
+    "@keystonehq/metamask-airgapped-keyring": "0.0.4",
     "@material-ui/core": "^4.11.0",
     "@metamask/contract-metadata": "^1.28.0",
     "@metamask/controllers": "^15.0.2",
