support qr based signer

--- a/package.json
+++ b/package.json
@@ -102,6 +102,8 @@
     "@ethereumjs/tx": "^3.2.1",
     "@formatjs/intl-relativetimeformat": "^5.2.6",
     "@fortawesome/fontawesome-free": "^5.13.0",
+    "@keystonehq/bc-ur-registry-eth": "^0.6.8",
+    "@keystonehq/metamask-airgapped-keyring": "0.0.4",
     "@material-ui/core": "^4.11.0",
     "@metamask/contract-metadata": "^1.28.0",
     "@metamask/controllers": "^15.0.2",
@@ -113,6 +115,7 @@
     "@metamask/obs-store": "^5.0.0",
     "@metamask/post-message-stream": "^4.0.0",
     "@metamask/providers": "^8.1.1",
+    "@ngraveio/bc-ur": "^1.1.6",
     "@popperjs/core": "^2.4.0",
     "@reduxjs/toolkit": "^1.5.0",
     "@sentry/browser": "^5.26.0",
@@ -177,6 +180,7 @@
     "pump": "^3.0.0",
     "punycode": "^2.1.1",
     "qrcode-generator": "1.4.1",
+    "qrcode.react": "^1.0.1",
     "react": "^16.12.0",
     "react-dnd": "^3.0.2",
     "react-dnd-html5-backend": "^7.4.4",
@@ -184,6 +188,7 @@
     "react-idle-timer": "^4.2.5",
     "react-inspector": "^2.3.0",
     "react-popper": "^2.2.3",
+    "react-qr-reader": "^2.2.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-simple-file-input": "^2.0.0",
